SampleDataUtil.java: Replace List.of to Arrays.asList
Signed-off-by: jjlee050 <josephlee050@gmail.com>